infra/kowl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kowl
  namespace: food-delivery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kowl
  template:
    metadata:
      labels:
        app: kowl
    spec:
      containers:
        - name: kowl
          image: docker.redpanda.com/redpandadata/console:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: kowl
  namespace: food-delivery
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: kowl
